WebContent/VAADIN/themes/reindeer/styles.css
/* ... */
.v-tabsheet-caption-close:active {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1372px;
}
.v-tabsheet-tabitem-selected .v-tabsheet-caption-close {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1390px;
}
.v-tabsheet-tabitem-selected .v-tabsheet-caption-close:hover {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1408px;
}
.v-tabsheet-tabitem-selected .v-tabsheet-caption-close:active {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1426px;
}
.v-tabsheet-tabitemcell-selected {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1444px;
}
.v-tabsheet-tabitemcell-selected-first {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1476px;
}
.v-tabsheet-tabitem-selected {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1508px;
	color: #232930;
}
.v-tabsheet-tabitem-selected .v-caption {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: right -1540px;
}
.v-tabsheet-spacertd div {
	margin-right: 4px;
}
.v-tabsheet-spacertd {
	background: transparent no-repeat right top;
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: right -1572px;
}
.v-tabsheet-content {
	border: 1px solid #dcdcdc;
	border-bottom: none;
	border-top: none;
	color: #222;
	text-shadow: none;
}
.blue .v-tabsheet-content {
	border-color: #a8bcc5;
}
.v-tabsheet-tabsheetpanel {
	background: #fff;
}
.v-sa .v-tabsheet-content,
.v-ff3 .v-tabsheet-content {
	border-color: rgba(0,0,0,.1);
}
.v-tabsheet-deco {
	height: 1px;
	border-top: 1px solid #bebebe;
	background: #e2e2e2;
	overflow: hidden;
}
.blue .v-tabsheet-deco {
	border-color: #92a3ac;
	background: #adc2cd;
}
.v-sa .v-tabsheet-deco,
.v-ff3 .v-tabsheet-deco {
	border-top-color: rgba(0,0,0,.1);
	background: rgba(0,0,0,.08);
}


/* Icons & error indicators */

.v-tabsheet-tabs .v-icon,
.v-tabsheet-tabs .v-captiontext,
.v-tabsheet-tabs .v-errorindicator {
	display: inline;
	float: none;
}
.v-sa .v-tabsheet-tabs .v-captiontext {
	display: inline-block;
}
.v-tabsheet-tabs .v-icon {
	width: 16px !important;
	height: 16px !important;
}
.v-tabsheet-tabs .v-errorindicator {
	display: inline-block;
	width: 13px;
	height: 16px;
	background: transparent url(common/icons/error.png) no-repeat 50%;
}
.v-ff2 .v-tabsheet-tabs .v-icon,
.v-ff2 .v-tabsheet-tabs .v-errorindicator {
	display: -moz-inline-stack;
}
.v-ie6 .v-tabsheet-tabs .v-errorindicator {
	background-image: url(common/icons/error-ie6.png);
}
.v-ie .v-tabsheet-tabs .v-errorindicator {
	zoom: 1;
	display: inline;
}

/* Tabsheet scroller styles */

.v-tabsheet-scroller {
	height: 31px;
	margin-top: -31px;
	padding: 0 3px 0 4px;
	border-right: 1px solid #c2c2c2;
	border-left: 1px solid #cfcfcf;
	position: relative;
	float: right;
	background: transparent url(tabsheet/img/framed/tab-bg.png) repeat-x left -1px;
	width: 36px;
}
.v-tabsheet-scroller button {
	margin-top: 7px;
}
.v-tabsheet-scrollerPrev,
.v-tabsheet-scrollerNext,
.v-tabsheet-scrollerPrev-disabled,
.v-tabsheet-scrollerNext-disabled {
	border: none;
	background: transparent;
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1604px;
	width: 18px;
	height: 17px;
	overflow: hidden;
	cursor: default;
}
.v-tabsheet-scroller button::-moz-focus-inner {
	border: none;
}
.v-tabsheet-scrollerNext {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1621px;
}
.v-tabsheet-scrollerPrev:active {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1638px;
}
.v-tabsheet-scrollerNext:active {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1655px;
}
.v-tabsheet-scrollerPrev-disabled,
.v-tabsheet-scrollerPrev-disabled:active {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1672px;
	opacity: 1;
	filter: none;
}
.v-tabsheet-scrollerNext-disabled,
.v-tabsheet-scrollerNext-disabled:active {
  background-image: url(common/img/vertical-sprites.png);
  -background-image: url(common/img/vertical-sprites-ie6.png);
  background-position: left -1689px;
	opacity: 1;
	filter: none;
}

/**
 * Tabsheet "minimal" style --------------
 */
.v-tabsheet-minimal .v-tabsheet-spacertd div {
	border-bottom: 1px solid #bfbfbf;
	height: auto;
	background: transparent;
}
.v-tabsheet-minimal .v-tabsheet-tabitemcell,
.v-tabsheet-minimal .v-tabsheet-spacertd {
	height: auto;
	background: transparent;
	padding-left: 0;
}
.v-tabsheet-minimal .v-tabsheet-tabitem {
	border: none;
	border-bottom: 1px solid #bfbfbf;
	color: #4d748f;
	padding: 0;
	height: auto;
	background: transparent;
	text-shadow: none;
}
.v-tabsheet-minimal .v-tabsheet-tabitem .v-caption {
	padding: 5px 16px;
	height: auto;
	background: transparent;
}
.v-tabsheet-minimal .v-tabsheet-tabitemcell-selected {
	background: transparent;
}
/* ... */

